Added Maltoni's comments to monojet V, minor restructuring
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@371 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -12,7 +12,7 @@ matter as Dark Matter, even though the observation of such matter at a collider
 could only establish that it is neutral, weakly-interactive, massive and stable
 on the distance-scales of tens of meters.} has not yet been observed in particle physics experiments, and
 there is not yet any evidence for non-gravitational interactions
-between Dark Matter and Standard Model particles.  If such
+between Dark Matter and Standard Model (SM) particles.  If such
 interactions exist, particles of Dark Matter could be produced
 at the LHC. Since Dark Matter particles themselves do not produce signals
 in the LHC detectors, one way to observe them is when they are produced in association
@@ -74,7 +74,7 @@ results are presented.
 
 \section{The ATLAS/CMS Dark Matter Forum}
 
-To understand what signal models should be considered for the upcoming LHC Run 2, groups of experimenters from 
+To understand what signal models should be considered for the upcoming LHC Run-2, groups of experimenters from 
 both ATLAS and CMS collaborations have held separate discussions with small groups of
 theorists~\cite{Malik:2014ggr,Yavin:14092893}. 
 Another joint discussion was held at the DM@LHC workshop in Oxford, in 
@@ -113,7 +113,7 @@ important to restrict the scope and timescale to the following:
   details as far as practical for early Run-2 LHC analyses. It
   would be desirable to have a common choice of leading order (LO) and 
   next-to-leading order (NLO) matrix elements corresponding to the state of the art calculations, 
-  parton shower matching and merging, factorization and renormalization
+  parton shower (PS) matching and merging, factorization and renormalization
   scales for each of the simplified models. This will also lead to a
   common set of theory uncertainties, which will facilitate the
   comparison of results between the two collaborations.
