Comments by Peskin
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@372 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/EWSpecificModels_Appendix.tex
+++ b/doc/tex/EWSpecificModels_Appendix.tex
@@ -3,7 +3,7 @@
 \input{tex/SingleTop.tex}
 
 \section{\texorpdfstring{Further W+\MET models with possible cross-section enhancements}{Further W+MET models with possible cross-section enhancements}}
-
+\label{app:monoWExtramodel}
 %Contributed by Yang Bai
 
 As pointed out in Ref.~\cite{Bell:2015sza}, the mono-$W$ signature can probe the iso-spin violating interactions of dark matter with quarks. The relevant operator after the electroweak symmetry breaking is 
