--- a/doc/tex/EWSpecificModels_VAMediators.tex
+++ b/doc/tex/EWSpecificModels_VAMediators.tex
@@ -6,8 +6,8 @@
 \svnid{$Id: $}   
 
 All models detailed in this Section are applicable to signatures where 
- a photon, a W boson, a Z boson or a Higgs boson
- is radiated from the initial state partons instead of a gluon. 
+a photon, a W boson, a Z boson or a Higgs boson
+is radiated from the initial state partons instead of a gluon. 
 The experimental signature is identified as \textit{V+\MET} and it
 has been sought by ATLAS and CMS in Refs.~\cite{Khachatryan:2014rwa,Aad:2014tda,Khachatryan:2014tva,ATLAS:2014wra,Aad:2013oja,Aad:2014vka}. 
 This signature is also produced by the models described in 
@@ -43,14 +43,18 @@ In the case of a \spinone mediator,
 an example Feynman diagram for these processes can be constructed by taking
 Fig.~\ref{fig:OP} and replacing the gluon with $\gamma,W$ or $Z$.
 
-When the initial state radiation is a $W^\pm$ boson, Run~1 searches have considered three benchmark cases adapted from the vector interaction in Ref. ~\cite{Bai:2012xg}, distinguished by $\xi$, the strength of the $d$ quark coupling relative the $u$ quark coupling:
-\begin{itemize}
- \item[$\xi=0$:] Mediator couples to up-type or down-type quarks, but not both;
- \item[$\xi=1$:] Mediator couples to up-type and down-type quarks with same strength;
- \item[$\xi=-1$:] Mediator couples to up-type and down-type quarks with same strength, but opposite sign.
-\end{itemize}
+%CD: Peskin killed all of this
+%When the initial state radiation is a $W^\pm$ boson, Run~1 searches have considered three benchmark cases adapted from the vector interaction in Ref. ~\cite{Bai:2012xg}, distinguished by $\xi$, the strength of the $d$ quark coupling relative the $u$ quark coupling:
+%\begin{itemize}
+% \item[$\xi=0$:] Mediator couples to up-type or down-type quarks, but not both;
+% \item[$\xi=1$:] Mediator couples to up-type and down-type quarks with same strength;
+% \item[$\xi=-1$:] Mediator couples to up-type and down-type quarks with same strength, but opposite sign.
+%\end{itemize}
+%
+%Contemplation of $\xi=-1$ heightened interest in searches for \spinone mediators with $W^\pm$ bosons in the final state. This choice enhances the cross-section significantly above the other choices and hardens the distribution of missing transverse energy used in the searches. The sensitivity of the $W+\MET$ search then surpasses that of the jet$+$\MET search. However, the situation $\xi=-1$ does not appear in an $\mathrm{SU}(2)$-gauge-invariant simplified model.\sidenote{It is well-known that the diagrams in which the $W$ couples to $u$ and $\bar{d}$ have opposite sign. This is what gives rise to the ``helicity zero'' in $u \bar{d} \rightarrow W g$. The relative sign is set by $\mathrm{SU}(2)$ and the statement that the mediator is an $\mathrm{SU}(2)$ singlet. We can increase the cross section by changing the sign, but to do so we have to give the mediator some $\mathrm{SU}(2)$ quantum number, making it, and the associated $\chi$, visible.} The simplified model with a vector mediator exchanged in the \schannel model is still viable when $\xi=1$\sidenote{The $W^\pm$ couples to the initial state quarks as $V$-$A$. If the mediator couples to quarks as $V$+$A$ then one expects the process to vanish completely in the massless quark limit.}. Ref.~\cite{Bell:2015sza} discusses the viability of departures $\xi < 1$ from both gauge-invariance and experimental points of view. An example of a model that arranges different effective DM couplings to $u_L$ and $d_L$ is detailed in Appendix~\ref{app:EWSpecificModels_Appendix}.
 
-Contemplation of $\xi=-1$ heightened interest in searches for \spinone mediators with $W^\pm$ bosons in the final state. This choice enhances the cross-section significantly above the other choices and hardens the distribution of missing transverse energy used in the searches. The sensitivity of the $W+\MET$ search then surpasses that of the jet$+$\MET search. However, the situation $\xi=-1$ does not appear in an $\mathrm{SU}(2)$-gauge-invariant simplified model.\sidenote{It is well-known that the diagrams in which the $W$ couples to $u$ and $\bar{d}$ have opposite sign. This is what gives rise to the ``helciity zero'' in $u \bar{d} \rightarrow W g$. The relative sign is set by $\mathrm{SU}(2)$ and the statement that the mediator is an $\mathrm{SU}(2)$ singlet. We can increase the cross section by changing the sign, but to do so we have to give the mediator some $\mathrm{SU}(2)$ quantum number, making it, and the associated $\chi$, visible.} The simplified model with a vector mediator exchanged in the \schannel model is still viable when $\xi=1$\sidenote{The $W^\pm$ couples to the initial state quarks as $V$-$A$. If the mediator couples to quarks as $V$+$A$ then one expects the process to vanish completely in the massless quark limit.}. Ref.~\cite{Bell:2015sza} discusses the viability of departures $\xi < 1$ from both gauge-invariance and experimental points of view. An example of a model that arranges different effective DM couplings to $u_L$ and $d_L$ is detailed in Appendix~\ref{app:EWSpecificModels_Appendix}.
+When the initial state radiation is a W boson, Run 1 searches have considered three benchmark cases, varying the relative coupling of the $W$ to $u$ and ${d}$ quarks.
+The simplified model with a vector mediator mediator exchanged in the s-channel includes only the simplest of these cases, in which the $W$ coupling to $u$ and ${d}$ quarks is identical, as required naively by $\mathrm{SU}(2)$ gauge invariance.  With some more complex model building, other cases are possible.  The case in which the $u$ and ${d}$ couplings have opposite sign is particularly interesting, since this enhances the $W+\MET$ signal over the jet$+$\MET signal~\cite{Bell:2015sza, Bai:2012xg}. Models of this type are discussed in Appendix~\ref{app:monoWExtramodel}.
 
 %The scan in the parameters that characterize this simplified model for EW boson + \MET
 %searches follow what is
